--- a/app/src/main/res/layout/activity_danh_sach_don_hang.xml
+++ b/app/src/main/res/layout/activity_danh_sach_don_hang.xml
@@ -34,8 +34,10 @@
         android:layout_height="wrap_content"
         >
         <Spinner
+            android:id="@+id/spdanhSach"
             android:layout_gravity="center"
-            android:layout_width="100dp"
+            android:layout_width="wrap_content"
+            android:entries="@array/danhsach"
             android:layout_height="wrap_content"/>
     </FrameLayout>
     <androidx.recyclerview.widget.RecyclerView
