--- a/app/src/main/res/layout/activity_chi_tiet_don_hang.xml
+++ b/app/src/main/res/layout/activity_chi_tiet_don_hang.xml
@@ -194,6 +194,8 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
                     <Button
+                        android:id="@+id/btnNhanDon"
+                        android:visibility="gone"
                         android:layout_width="180dp"
                         android:layout_height="50dp"
                         android:text="Nhận đơn"
@@ -202,6 +204,8 @@
                         android:background="@drawable/botronbtn"
                         />
                     <Button
+                        android:id="@+id/btnTuChoiDon"
+                        android:visibility="gone"
                         android:layout_marginHorizontal="20dp"
                         android:layout_width="170dp"
                         android:layout_height="50dp"
@@ -212,11 +216,55 @@
                         android:layout_marginLeft="0dp"
                         android:layout_marginRight="15dp"
                         />
+                    <Button
+                        android:id="@+id/btnDaLayHang"
+                        android:visibility="gone"
+                        android:layout_width="180dp"
+                        android:layout_height="50dp"
+                        android:text="Đã lấy hàng"
+                        android:textColor="@color/black"
+                        android:textSize="15dp"
+                        android:background="@drawable/botronbtn"
+                        />
+                    <Button
+                        android:id="@+id/btnHuyDon"
+                        android:visibility="gone"
+                        android:layout_marginHorizontal="20dp"
+                        android:layout_width="170dp"
+                        android:layout_height="50dp"
+                        android:text="Hủy đơn"
+                        android:textColor="@color/black"
+                        android:textSize="15dp"
+                        android:background="@drawable/botronbtnfail"
+                        android:layout_marginLeft="0dp"
+                        android:layout_marginRight="15dp"
+                        />
+                    <Button
+                        android:id="@+id/btnGiaoThanhCong"
+                        android:visibility="gone"
+                        android:layout_width="180dp"
+                        android:layout_height="50dp"
+                        android:text="Giao thành công"
+                        android:textColor="@color/black"
+                        android:textSize="15dp"
+                        android:background="@drawable/botronbtn"
+                        />
+                    <Button
+                        android:id="@+id/btnGiaoThatBai"
+                        android:visibility="gone"
+                        android:layout_marginHorizontal="20dp"
+                        android:layout_width="170dp"
+                        android:layout_height="50dp"
+                        android:text="Giao thất bại"
+                        android:textColor="@color/black"
+                        android:textSize="15dp"
+                        android:background="@drawable/botronbtnfail"
+                        android:layout_marginLeft="0dp"
+                        android:layout_marginRight="15dp"
+                        />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
-
-
 
 </LinearLayout>
