--- a/app/src/main/res/layout/activity_danh_sach_don_hang.xml
+++ b/app/src/main/res/layout/activity_danh_sach_don_hang.xml
@@ -20,6 +20,7 @@
             android:layout_marginLeft="5dp"
             />
         <TextView
+            android:id="@+id/tvDanhSach"
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
