--- a/app/src/main/res/layout/activity_danh_sach_don_hang.xml
+++ b/app/src/main/res/layout/activity_danh_sach_don_hang.xml
@@ -35,11 +35,12 @@
         android:layout_height="wrap_content"
         >
         <Spinner
+            android:background="@drawable/botronsp"
             android:id="@+id/spdanhSach"
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:entries="@array/danhsach"
-            android:layout_height="wrap_content"/>
+            android:layout_height="35dp"/>
     </FrameLayout>
     <androidx.recyclerview.widget.RecyclerView
         android:layout_marginTop="10dp"
