--- a/app/src/main/res/layout/activity_ly_do.xml
+++ b/app/src/main/res/layout/activity_ly_do.xml
@@ -20,6 +20,7 @@
             android:layout_marginLeft="5dp"
             />
         <TextView
+            android:id="@+id/tvlyDo"
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -35,7 +36,7 @@
         android:hint="Nhập nội dung"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:lines="4"
+        android:lines="6"
         android:inputType="textMultiLine"/>
     <Button
         android:id="@+id/btnGui"
