--- a/app/src/main/res/layout/activity_chi_tiet_don_hang.xml
+++ b/app/src/main/res/layout/activity_chi_tiet_don_hang.xml
@@ -221,25 +221,14 @@
                     <Button
                         android:id="@+id/btnDaLayHang"
                         android:visibility="gone"
-                        android:layout_width="180dp"
+                        android:layout_width="match_parent"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"
                         android:layout_height="50dp"
                         android:text="Đã lấy hàng"
                         android:textColor="@color/black"
                         android:textSize="15dp"
                         android:background="@drawable/botronbtn"
-                        />
-                    <Button
-                        android:id="@+id/btnHuyDon"
-                        android:visibility="gone"
-                        android:layout_marginHorizontal="20dp"
-                        android:layout_width="170dp"
-                        android:layout_height="50dp"
-                        android:text="Hủy đơn"
-                        android:textColor="@color/black"
-                        android:textSize="15dp"
-                        android:background="@drawable/botronbtnfail"
-                        android:layout_marginLeft="0dp"
-                        android:layout_marginRight="15dp"
                         />
                     <Button
                         android:id="@+id/btnGiaoThanhCong"
@@ -300,6 +289,16 @@
                         android:textSize="15dp"
                         android:background="@drawable/botronbtn"
                         />
+                    <TextView
+                        android:id="@+id/tvxacnhan"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:visibility="gone"
+                        android:text="Đã chuyển tiền cho cửa hàng"
+                        android:textSize="20dp"
+                        android:textStyle="bold"
+                        android:textColor="#B58686"/>
 
                 </LinearLayout>
             </LinearLayout>
