--- a/app/src/main/res/layout/activity_chi_tiet_don_hang.xml
+++ b/app/src/main/res/layout/activity_chi_tiet_don_hang.xml
@@ -160,6 +160,17 @@
                     android:drawablePadding="5dp"
                     android:drawableLeft="@drawable/ic_baseline_person_24"
                     />
+                <TextView
+                    android:layout_marginTop="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Danh sách sản phẩm :"
+                    android:textSize="20dp"
+                    android:layout_marginLeft="10dp"
+                    android:textColor="@color/black"
+                    android:drawablePadding="5dp"
+                    />
+
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:layout_width="match_parent"
