Update: Giao Diện

--- a/app/src/main/res/layout/activity_ly_do.xml
+++ b/app/src/main/res/layout/activity_ly_do.xml
@@ -7,23 +7,24 @@
     android:orientation="vertical"
     tools:context=".LyDo_Activity">
     <FrameLayout
+        android:layout_gravity="center"
         android:background="#93242A"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:orientation="horizontal">
         <ImageView
             android:id="@+id/imgBack"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:src="@drawable/ic_baseline_back"
-            android:layout_marginTop="3dp"
+
             android:layout_marginLeft="5dp"
             />
         <TextView
             android:id="@+id/tvlyDo"
             android:gravity="center"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:text="Lý do từ chối"
             android:textSize="22dp"
             android:textStyle="bold"
