--- a/app/src/main/res/layout/activity_quen_mat_khau.xml
+++ b/app/src/main/res/layout/activity_quen_mat_khau.xml
@@ -9,12 +9,12 @@
     <FrameLayout
         android:background="#93242A"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:orientation="horizontal">
         <ImageView
             android:id="@+id/imgBack"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:src="@drawable/ic_baseline_back"
             android:layout_marginTop="3dp"
             android:layout_marginLeft="5dp"
@@ -22,7 +22,7 @@
         <TextView
             android:gravity="center"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:text="Quên mật khẩu"
             android:textSize="22dp"
             android:textStyle="bold"
