--- a/app/src/main/res/layout/activity_danh_sach_don_hang.xml
+++ b/app/src/main/res/layout/activity_danh_sach_don_hang.xml
@@ -9,7 +9,7 @@
     <FrameLayout
         android:background="#93242A"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
         android:orientation="horizontal">
         <ImageView
             android:id="@+id/imgBack"
@@ -29,15 +29,16 @@
             android:textColor="@color/white" />
     </FrameLayout>
     <FrameLayout
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
         <Spinner
+            android:layout_margin="5dp"
             android:background="@drawable/botronsp"
             android:id="@+id/spdanhSach"
             android:layout_gravity="center"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:entries="@array/danhsach"
             android:layout_height="35dp"/>
     </FrameLayout>
