--- a/app/src/main/res/layout/activity_xac_nhan_tra_hang.xml
+++ b/app/src/main/res/layout/activity_xac_nhan_tra_hang.xml
@@ -8,10 +8,10 @@
     <LinearLayout
         android:background="#CD8C8C"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:orientation="horizontal">
         <ImageView
-
+            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_baseline_arrow_back_ios_24"
