--- a/app/src/main/res/layout/itemdonhang.xml
+++ b/app/src/main/res/layout/itemdonhang.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
+
     android:background="@drawable/borderlinear"
     android:id="@+id/lndonhang"
+    android:layout_margin="10dp"
     >
 
     <LinearLayout
@@ -15,10 +16,12 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:layout_margin="10dp"
             android:id="@+id/imganhdonhang"
             android:layout_width="80dp"
-            android:layout_height="95dp"
+            android:layout_height="80dp"
             android:layout_marginTop="20dp"
+            android:scaleType="centerCrop"
             android:src="@drawable/anhuser" />
 
         <LinearLayout
@@ -33,10 +36,10 @@
                 android:id="@+id/maDonHang"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="40dp"
+                android:layout_marginLeft="20dp"
                 android:text="@string/madh"
                 android:textColor="#ED2A1C"
-                android:textSize="20dp" />
+                android:textSize="18dp" />
             <TextView
                 android:singleLine="false"
                 android:id="@+id/tvtensanpham"
@@ -44,7 +47,7 @@
                 android:layout_height="wrap_content"
                 android:text="Tên sản phẩm"
                 android:textColor="#000"
-                android:textSize="17dp"
+                android:textSize="16dp"
                 android:drawableLeft="@drawable/ic_baseline_wysiwyg_24"
                 android:drawablePadding="5dp"
                 />
@@ -54,7 +57,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/sodienthoaicuahang"
                 android:textColor="#000"
-                android:textSize="17dp"
+                android:textSize="16dp"
                 android:drawableLeft="@drawable/ic_baseline_local_phone_24"
                 android:drawablePadding="5dp"
                 />
@@ -75,7 +78,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/diachinguoinhan"
                 android:textColor="#000"
-                android:textSize="17dp" />
+                android:textSize="16dp" />
             <TextView
                 android:id="@+id/tvTongDon"
                 android:layout_marginLeft="40dp"
@@ -83,7 +86,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/tongdon"
                 android:textColor="#000"
-                android:textSize="23dp" />
+                android:textSize="20dp" />
         </LinearLayout>
 
     </LinearLayout>
