--- a/app/src/main/res/layout/itemlichsu.xml
+++ b/app/src/main/res/layout/itemlichsu.xml
@@ -9,7 +9,7 @@
     android:layout_marginTop="10dp"
     android:id="@+id/lnlichsu">
     <LinearLayout
-        android:layout_width="429dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
@@ -32,24 +32,25 @@
         </LinearLayout>
 
         <LinearLayout
+            android:layout_margin="10dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
-            tools:layout_editor_absoluteX="-50dp"
-            tools:layout_editor_absoluteY="142dp">
+            >
 
             <ImageView
+                android:layout_gravity="center"
                 android:id="@+id/productimg"
                 android:layout_width="80dp"
-                android:layout_height="95dp"
-                android:layout_marginTop="20dp"
+                android:layout_height="80dp"
+
                 android:src="@drawable/anhuser" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="30dp"
                 android:layout_weight="1"
                 android:orientation="vertical">
 
@@ -57,10 +58,10 @@
                     android:id="@+id/maDonHang"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="40dp"
+                    android:layout_marginLeft="20dp"
                     android:text="@string/madh"
                     android:textColor="#ED2A1C"
-                    android:textSize="25dp" />
+                    android:textSize="20dp" />
 
                 <TextView
                     android:id="@+id/tvTenCuaHang"
@@ -70,18 +71,18 @@
                     android:drawablePadding="5dp"
                     android:text="Tên cửa hàng"
                     android:textColor="#000"
-                    android:textSize="20dp" />
+                    android:textSize="16dp" />
 
                 <TextView
                     android:id="@+id/tvTenSanPham"
-                    android:layout_marginTop="5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
                     android:drawableLeft="@drawable/ic_baseline_wysiwyg_24"
                     android:drawablePadding="5dp"
                     android:text="Tên sản phẩm"
                     android:textColor="#000"
-                    android:textSize="20dp" />
+                    android:textSize="16dp" />
 
 
             </LinearLayout>
@@ -98,11 +99,11 @@
                 android:id="@+id/diaChiCuaHang"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="-7dp"
+
                 android:drawableLeft="@drawable/ic_baseline_location_on_24"
                 android:text="@string/diachicuahang"
                 android:textColor="#000"
-                android:textSize="20dp" />
+                android:textSize="14dp" />
 
             <TextView
                 android:id="@+id/diaChiNguoiNhan"
@@ -111,7 +112,7 @@
                 android:drawableLeft="@drawable/ic_baseline_location_on_24"
                 android:text="@string/diachinguoinhan"
                 android:textColor="#000"
-                android:textSize="20dp" />
+                android:textSize="14dp" />
 
             <TextView
                 android:id="@+id/tvTongDon"
@@ -121,7 +122,7 @@
                 android:layout_marginRight="30dp"
                 android:text="@string/tongdon"
                 android:textColor="#000"
-                android:textSize="25dp" />
+                android:textSize="20dp" />
         </LinearLayout>
     </LinearLayout>
 
