--- a/app/src/main/res/layout/layoutheader.xml
+++ b/app/src/main/res/layout/layoutheader.xml
@@ -35,6 +35,7 @@
         android:layout_height="wrap_content"
         android:text="Trangthai"
         android:textSize="16dp"
+        android:textStyle="bold"
         android:textColor="@color/black"
         />
 
