--- a/app/src/main/res/layout/activity_thongtincanhan.xml
+++ b/app/src/main/res/layout/activity_thongtincanhan.xml
@@ -9,7 +9,7 @@
     <FrameLayout
         android:background="#93242A"
         android:layout_width="match_parent"
-        android:layout_height="50"
+        android:layout_height="50dp"
         android:orientation="horizontal">
         <ImageView
             android:id="@+id/imgBack"
