--- a/app/src/main/res/layout/itemdonhang.xml
+++ b/app/src/main/res/layout/itemdonhang.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-
+    android:orientation="vertical"
     android:background="@drawable/borderlinear"
     android:id="@+id/lndonhang"
     android:layout_margin="10dp"
@@ -37,6 +37,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
+                android:layout_marginBottom="10dp"
                 android:text="@string/madh"
                 android:textColor="#ED2A1C"
                 android:textSize="18dp" />
@@ -48,6 +49,7 @@
                 android:text="Tên sản phẩm"
                 android:textColor="#000"
                 android:textSize="16dp"
+                android:layout_marginBottom="10dp"
                 android:drawableLeft="@drawable/ic_baseline_wysiwyg_24"
                 android:drawablePadding="5dp"
                 />
@@ -57,39 +59,45 @@
                 android:layout_height="wrap_content"
                 android:text="@string/sodienthoaicuahang"
                 android:textColor="#000"
-                android:textSize="16dp"
+                android:textSize="15dp"
+                android:layout_marginBottom="10dp"
+
                 android:drawableLeft="@drawable/ic_baseline_local_phone_24"
                 android:drawablePadding="5dp"
                 />
 
-            <TextView
-                android:id="@+id/tvDiaChiCuaHang"
-                android:drawableLeft="@drawable/ic_baseline_location_on_24"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/diachicuahang"
-                android:textColor="#000"
-                android:textSize="17dp" />
 
-            <TextView
-                android:id="@+id/tvDiaChiNguoiNhan"
-                android:drawableLeft="@drawable/ic_baseline_location_on_24"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/diachinguoinhan"
-                android:textColor="#000"
-                android:textSize="16dp" />
-            <TextView
-                android:id="@+id/tvTongDon"
-                android:layout_marginLeft="40dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/tongdon"
-                android:textColor="#000"
-                android:textSize="20dp" />
         </LinearLayout>
 
     </LinearLayout>
+    <TextView
+        android:layout_marginBottom="5dp"
 
+        android:id="@+id/tvDiaChiCuaHang"
+        android:drawableLeft="@drawable/ic_baseline_location_on_24"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/diachicuahang"
+        android:textColor="#000"
+        android:textSize="15dp" />
+
+    <TextView
+        android:layout_marginBottom="5dp"
+        android:id="@+id/tvDiaChiNguoiNhan"
+        android:drawableLeft="@drawable/ic_baseline_location_on_24"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/diachinguoinhan"
+        android:textColor="#000"
+        android:textSize="15dp" />
+    <TextView
+        android:layout_marginBottom="5dp"
+        android:id="@+id/tvTongDon"
+        android:layout_marginLeft="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/tongdon"
+        android:textColor="#000"
+        android:textSize="18dp" />
 
 </LinearLayout>
